# crabboy

./: Cargo.toml  README.md  index.html
crabboy-gb/: Cargo.toml
crabboy-gb/src/: constants.rs  gameboy.rs
crabboy-gb/src/cpu/: mod.rs  timer.rs
crabboy-gb/src/interconnect/: joypad.rs  mmu.rs  mod.rs  ppu.rs  serial.rs
crabboy-gb/src/interconnect/cartridge/: cartridge_info.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  nombc.rs
crabboy-gb/tests/: blaargs.rs
crabboy-gui/: Cargo.toml  Dioxus.toml
crabboy-gui/src/: constants.rs  gui.rs  main.rs
crabboy-wasm/: Cargo.toml  build.sh
crabboy-wasm/src/: lib.rs
crabboy-wasm/web/: crabboy_wasm.d.ts  crabboy_wasm.js  crabboy_wasm_bg.wasm  crabboy_wasm_bg.wasm.d.ts  index.js  package.json  rustboy_wasm.js  style.css
rustboy-gui/src/: gui.rs  main.rs
