[package]
name = "crabboy-gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
env_logger = "0.11.10"
clap = { version = "4.6.0", features = ["derive"] }
modular-bitfield = "0.13.1"
wasm-bindgen = "0.2.117"
bincode = "1.3.3"
serde = {version = "1.0.228",features =["derive"]}
serde-big-array = "0.5.1"
yazi = "0.2.1"

[lib]
name = "crabboy"
path = "src/lib.rs"
