[package]
name = "crabboy-gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
modular-bitfield = "0.13.1"
wasm-bindgen = "0.2.87"
serde = {version = "1.0.203",features =["derive"]}
serde-big-array = "0.5.1"
yazi = "0.2.0"
bitcode = {version="0.6.9", features=["std", "serde"]}

[lib]
name = "crabboy"
path = "src/lib.rs"
