[package]
name = "crabboy-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabboy-gb= {path = "../crabboy-gb"}
anyhow = "1.0.102"
log = "0.4.29"
pretty_env_logger = "0.4.0"
env_logger = "0.11.10"
imgui = "0.12.0"
rfd = {version = "0.17.2", default-features=false, features=["gtk3"]}

glow = "0.14"
imgui-glow-renderer = "0.13.0"
winit = {version = "0.30", features = ["rwh_06"]}
imgui-winit-support = "0.13.0"
glutin = "0.32"
raw-window-handle = "0.6.0"
glutin-winit = "0.5.0"

[dependencies.sdl2]
version = "0.38.0"
