[package]
name = "crabboy-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
crabboy-gb= {path = "../crabboy-gb"}
web-sys = {version = "0.3.70", features = ["console",
"CanvasRenderingContext2d",
"Document",
"Element",
"HtmlCanvasElement",
"Window",
"ImageData"
]}

[lib]
crate-type = ["rlib", "cdylib"]
